--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -18,25 +18,31 @@
 
 <section class="container">
     <div class="col-md-12">
-        <hr>
-        {% if app.user %}
-            <a href="/" class="btn btn-default btm-xs">Товары</a>
-            <a href="{{ path('order_list') }}" class="btn btn-default btm-xs">Заказы</a>
-            <a href="{{ path('fos_user_security_logout') }}" class="btn btn-default btm-xs">Выйти</a>
-        {% else %}
-            <a href="/register" class="btn btn-default btm-xs">Регистрация</a>
-            <a href="{{ path('fos_user_security_login') }}" class="btn btn-default btm-xs">Войти</a>
-        {% endif %}
+        <div>
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+                <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                {#<a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>#}
+            {% endif %}
+        </div>
 
-        <hr>
+        {% for type, messages in app.session.flashBag.all %}
+            {% for message in messages %}
+                <div class="{{ type }}">
+                    {{ message|trans({}, 'FOSUserBundle') }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+        <div>
+            {% block fos_user_content %}
+            {% endblock fos_user_content %}
+        </div>
+
     </div>
-
-
-    {% block body %}{% endblock %}
-
-    <script src="https://yastatic.net/jquery/3.1.1/jquery.min.js"></script>
-    <script src="/cart/jquery.smartCart.min.js"></script>
-    {% block javascripts %}{% endblock %}
 </section>
 
 </body>
